Bug 376726 - Can't switch to Global Menu by hitting Alt key.
Summary: Can't switch to Global Menu by hitting Alt key.
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Global Menu widget (other bugs)
Version First Reported In: 5.9.2
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Kai Uwe Broulik
URL:
Keywords:
: 376897 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-02-20 18:20 UTC by i9i7
Modified: 2017-06-22 08:40 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.10.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description i9i7 2017-02-20 18:20:45 UTC
With normal window menus, you can switch focus to the menu by hitting the alt key. This doesn't work with the Global Menu. This makes the Global Menu incompatible with keyboard navigation.
Comment 1 Kai Uwe Broulik 2017-02-21 09:43:19 UTC
Where can you do this? Just pressing Alt does nothing in Qt applications with Plasma's integration plugin - it only does that on Windows.

There's a Qt bug that prevents exported menu entries from registering a shortcut, e.g. Alt+F does not invoke "File". This is fixed in Qt 5.8, I think.
Comment 2 i9i7 2017-02-21 16:09:56 UTC
(In reply to Kai Uwe Broulik from comment #1)
> Where can you do this? Just pressing Alt does nothing in Qt applications
> with Plasma's integration plugin - it only does that on Windows.
Huh, it looks like you may be right. However, in an application like Dolphin, if I hold down the Alt key, it actually does normally activate an underline effect under all of the menu entries. This is absent in the global menu.

> There's a Qt bug that prevents exported menu entries from registering a
> shortcut, e.g. Alt+F does not invoke "File". This is fixed in Qt 5.8, I
> think.
I'm in QT 5.8, Plasma 5.9.2 and this functionality is still missing.
Comment 3 Kai Uwe Broulik 2017-02-27 10:24:11 UTC
Ok, seems we didn't hook up the signal that was introduced in Qt 5.8. We're on it.
Comment 4 David Edmundson 2017-03-06 23:45:39 UTC
*** Bug 376897 has been marked as a duplicate of this bug. ***
Comment 5 Kai Uwe Broulik 2017-03-07 13:20:22 UTC
Git commit aef74e97e2ed462a3f23d8773452b3d49230050f by Kai Uwe Broulik.
Committed on 07/03/2017 at 13:19.
Pushed by broulik into branch 'Plasma/5.9'.

[QDBusMenuBar] Connect to popupRequested signal

This signal is emitted when an item should be activated, e.g. when pressing Alt+F to open the "File" menu.
It is looked up at runtime as distributions might have backported this feature from Qt 5.8.

Differential Revision: https://phabricator.kde.org/D4955

M  +6    -0    src/platformtheme/qdbusmenubar.cpp

https://commits.kde.org/plasma-integration/aef74e97e2ed462a3f23d8773452b3d49230050f
Comment 6 Szymon Łągiewka 2017-06-04 19:37:01 UTC
Should this be fixed already in 5.10? Still happens to me with Plasma 5.10 and Qt 5.8.

To be more detailed: I have global menu available in my panels that are made with Latte. But I've chceked this with regular App menu by using right mouse click on desktop -> add panel -> Application Menu Bar. The resulting panel does contain the app menu, but does not react to alt actions, i.e. alt+f in Dolphin for File. Before I've added the bar, I quit Latte and restarted plasmashell with kquit/kstart.

This may or may not be related to other problems like https://bugs.kde.org/show_bug.cgi?id=375053. For me enabling app menu breaks i.e. Auto-Type in KeePassXC which is bound to Ctrl+V shortcut.
Comment 7 Kai Uwe Broulik 2017-06-22 08:40:29 UTC
Git commit 92a7089e9a103e5c7f93a46aaf67b01460dd8cb0 by Kai Uwe Broulik.
Committed on 22/06/2017 at 08:21.
Pushed by broulik into branch 'Plasma/5.10'.

[AppMenu Applet] Wire up DBusMenuImporter::actionActivationRequested

Ensures that pressing e.g. Alt+F will popup the "File" menu.
FIXED-IN: 5.10.3

Differential Revision: https://phabricator.kde.org/D6336

M  +1    -0    applets/appmenu/package/contents/ui/main.qml
M  +8    -0    applets/appmenu/plugin/appmenumodel.cpp
M  +3    -0    applets/appmenu/plugin/appmenumodel.h

https://commits.kde.org/plasma-workspace/92a7089e9a103e5c7f93a46aaf67b01460dd8cb0