[AppMenu Applet] Wire up DBusMenuImporter::actionActivationRequested

Ensures that pressing e.g. Alt+F will popup the "File" menu.

BUG: 376726
FIXED-IN: 5.10.3

Differential Revision: https://phabricator.kde.org/D6336